# chord_namer

./: README.md  chord-namer.html  example.py  lambda_test.py  musicxml-processor-webpage.html  output.mxl  pyproject.toml  setup.py
chord_namer/: core.py
midi_harmonic_analysis/: __init__.py  core.py
